update attr data

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
         <nav class="menutren">
             <ul>
-                <li><a href="#">SOVA</a></li>
-                <li><a href="#">SAGE</a></li>
-                <li><a href="#">REYNA</a></li>
-                <li><a href="#">JETT</a></li>
-                <li><a href="#">PHOENIX</a></li>
+                <li><a href="#" data-target=".sova">SOVA</a></li>
+                <li><a href="#" data-target=".sage">SAGE</a></li>
+                <li><a href="#" data-target=".reyna">REYNA</a></li>
+                <li><a href="#" data-target=".jett">JETT</a></li>
+                <li><a href="#" data-target=".phoenix">PHOENIX</a></li>
             </ul>
         </nav>
     </header>
